--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ python = "~3.7"
 gym = {extras = ["classic_control"], version = "^0"}
 matplotlib = "^3.4.2"
 numpy = "^1.15.0"
-torch = "^1.4.0"
+torch = { url = "https://download.pytorch.org/whl/cpu/torch-1.9.0%2Bcpu-cp37-cp37m-linux_x86_64.whl"}
 tqdm = "^4.61.2"
 stable-baselines3 = "~0.10.0"
 sacred = "0.8.1"
